force-app/main/default/objects/Facility__c/Facility__c.object-meta.xml
<CustomObject>
    <label>Facility</label>
    <pluralLabel>Facilities</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Facility Name</label>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>