force-app/main/default/objects/Facility__c/fields/Conservation_Score__c.field-meta.xml
<CustomField>
    <fullName>Conservation_Score__c</fullName>
    <label>Conservation Score (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>