force-app/main/default/objects/Facility__c/fields/Last_Month_Usage__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_Usage__c</fullName>
    <label>Last Month Usage (L)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>